--- a/_posts/2023-06-27-pwa-1.md
+++ b/_posts/2023-06-27-pwa-1.md
@@ -1,7 +1,7 @@
 ---
 title: "PWA 정리(1): 기초 정리"
 date: 2023-06-27 18:06
-category: "메모"
+category: "정리함"
 tag: [PWA, HTML, JS]
 published: true
 toc: true
