--- a/_posts/2023-06-27-pwa-2.md
+++ b/_posts/2023-06-27-pwa-2.md
@@ -1,7 +1,7 @@
 ---
 title: "PWA 정리(2): 구성 요소"
 date: 2023-06-27 19:04
-category: "메모"
+category: "정리함"
 tag: [PWA, HTML, JS]
 published: true
 toc: true
