--- a/_posts/2023-06-27-pwa-3.md
+++ b/_posts/2023-06-27-pwa-3.md
@@ -331,7 +331,7 @@ toc_sticky: false
     </v-main>
 
     <v-footer color="primary" dark>
-        <div class="mx-auto">Copyright &copy; {{ new Date().getFullYear() }}</div>
+        <div class="mx-auto">Copyright &copy; {% raw %}{{ new Date().getFullYear() }}{% endraw %}</div>
     </v-footer>
 </v-app>
 
@@ -455,11 +455,11 @@ toc_sticky: false
                 <v-list-item @click="">
                     <!-- 왼쪽 icon: avatar: 원 모양의 디자인으로 바꿔줌-->
                     <v-list-item-avatar>
-                        <v-icon :class="item.icon_style">{{ item.icon_name }}</v-icon>
+                        <v-icon :class="item.icon_style">{% raw %}{{ item.icon_name }}{% endraw %}</v-icon>
                     </v-list-item-avatar>
                     <!-- 오른쪽 내용-->
                     <v-list-item-content>
-                        <v-list-item-title>{{ item.title }}</v-list-item-title>
+                        <v-list-item-title>{% raw %}{{ item.title }}{% endraw %}</v-list-item-title>
                     </v-list-item-content>
                     <!-- 오른쪽에 화살표 아이콘 넣기-->
                     <v-list-item-action>
