--- a/_posts/2023-06-27-pwa-3.md
+++ b/_posts/2023-06-27-pwa-3.md
@@ -499,5 +499,182 @@ toc_sticky: false
             }
         }
     })
-</script>
+    </script>
     ```
+<br>
+
+## bottom-navigation
+- 
+    ```html
+    <v-footer>
+        <!-- absolute: 스크롤에 상관없이 항상 아래에 위치 
+                value는 true/false로 보이거나 안 보이게 할 수 있음-->
+        <v-bottom-navigation absolute v-model="sSelect" dark>
+            <!-- value는 sSelect 관련 값-->
+            <v-btn text value="자전거">
+                자전거
+                <v-icon>directions_bike</v-icon>
+            </v-btn>
+
+            <v-btn text value="지하철">
+                지하철
+                <v-icon>subway</v-icon>
+            </v-btn>
+
+            <v-btn text value="버스">
+                버스
+                <v-icon>directions_bus</v-icon>
+            </v-btn>
+        </v-bottom-navigation>
+    </v-footer>
+    ```
+<br>
+
+## navigation-drawer
+- 
+    ```html
+        <v-app-bar app color="primary" dark>
+        <!-- @click.stopL: 마우스를 눌렀다 떼었을 때 -->
+        <v-app-bar-nav-icon @click.stop="bDrawer = !bDrawer">
+        </v-app-bar-nav-icon>
+        <v-toolbar-title>Header 입니다</v-toolbar-title>
+    </v-app-bar>
+
+    <!-- absolute: 메뉴 아이콘 위치부터 펼쳐지게 -->
+    <v-navigation-drawer absolute temporary v-model="bDrawer">
+        <v-toolbar flat height="70px">
+            <v-list>
+                <v-list-item>
+                    <v-list-item-avatar>
+                        <img src="https://randomuser.me/api/portraits/men/44.jpg">
+                    </v-list-item-avatar>
+                    <v-list-item-content>
+                        <v-list-item-title class="title">홍길동</v-list-item-title>
+                        <v-list-item-subtitle>로그인</v-list-item-subtitle>
+                    </v-list-item-content>
+                </v-list-item>
+            </v-list>
+        </v-toolbar>
+        
+        <v-divider> <!-- 항목 사이의 구분선-->
+        </v-divider>
+
+        <v-list class="pt-3">
+            <v-list-item v-for="item in aMenu_items" 
+                        :key="item.title" :href="item.link">
+                <v-list-item-action>
+                    <v-icon>{{ item.icon }}</v-icon>
+                </v-list-item-action>
+                <v-list-item-content>
+                    <v-list-item-title>{{ item.title }}</v-list-item-title>
+                </v-list-item-content>
+            </v-list-item>
+        </v-list>
+    </v-navigation-drawer>
+    ```
+<br>
+
+## 페이지간 데이터 연동
+### router 사용
+```html
+<!-- main_page -->
+<div>
+    <v-text-field label="매개변수1" v-model="sParam1"></v-text-field>
+    <v-text-field label="매개변수2" v-model="sParam2"></v-text-field>
+</div>
+
+<div class="text-center" v-on="fnGoSub">
+    <v-btn @click="fnGoSub" class="mt-5" color="purple" dark>
+        <v-icon>확 인</v-icon>
+    </v-btn>
+</div>
+
+<script>
+    export default {
+
+        data: function() {
+            return {
+                sParam1: '',
+                sParam2: ''
+            }
+        },
+
+        methods:{
+            fnGoSub() {
+                // $router: 인스턴스 하나만 존재 
+                // router.push() ... 에 사용
+                this.$router.push({
+                    name: 'sub_page',
+                    params: {
+                        p_param1: this.sParam1,
+                        p_param2: this.sParam2
+                    }
+                })
+            }
+        }
+    }
+</script>
+
+<!-- sub page -->
+<script>
+    <p class="display-4 my-4">{{ sTitle1 }}</p>
+    <p class="display-4 my-4">{{ sTitle2 }}</p>
+
+    export default {
+        data() {
+            return {
+                // $route : 라우팅 발생마다 생성되는 객체
+                sTitle1: this.$route.params.p_param1,
+                sTitle2: this.$route.params.p_param2
+            }
+        }
+    }
+</script>
+```
+<br>
+
+### Vuex 사용
+-
+```html
+<!-- main page -->
+<v-main>
+    <p class="text-center display-3 my-4">메인 페이지입니다</p>
+        <v-row>
+            <v-col offset-sm="1" sm="10">
+                <v-text-field label="제목" v-model="sTitle"></v-text-field>
+            </v-col>
+        </v-row>
+
+    <div class="text-center">
+        <v-btn large class="mt-5" color="purple" dark @click="fnSetTitle">
+        확 인</v-btn>
+    </div>
+</v-main>
+
+<script>
+    export default {
+        data() {
+        return {
+            sTitle: this.$store.getters.fnGetData
+        }
+        },
+        methods: {
+        fnSetTitle() {
+            this.$store.commit('fnSetData', this.sTitle);
+            this.$router.push('sub')
+        }
+        }
+    }
+</script>
+
+<!-- sub page -->
+<script>
+  export default {
+    data() {
+      return {
+        sTitle: this.$store.getters.fnGetData
+      }
+    }
+  }
+</script>
+```
