--- a/_posts/2023-06-27-pwa-3.md
+++ b/_posts/2023-06-27-pwa-3.md
@@ -563,10 +563,10 @@ toc_sticky: false
             <v-list-item v-for="item in aMenu_items" 
                         :key="item.title" :href="item.link">
                 <v-list-item-action>
-                    <v-icon>{{ item.icon }}</v-icon>
+                    <v-icon>{% raw %}{{ item.icon }}{% endraw %}</v-icon>
                 </v-list-item-action>
                 <v-list-item-content>
-                    <v-list-item-title>{{ item.title }}</v-list-item-title>
+                    <v-list-item-title>{% raw %}{{ item.title }}{% endraw %}</v-list-item-title>
                 </v-list-item-content>
             </v-list-item>
         </v-list>
@@ -617,8 +617,8 @@ toc_sticky: false
 
 <!-- sub page -->
 <script>
-    <p class="display-4 my-4">{{ sTitle1 }}</p>
-    <p class="display-4 my-4">{{ sTitle2 }}</p>
+    <p class="display-4 my-4">{% raw %}{{ sTitle1 }}{% endraw %}</p>
+    <p class="display-4 my-4">{% raw %}{{ sTitle2 }}{% endraw %}</p>
 
     export default {
         data() {
