대학원 수업 발표 자료 update (paper review만)

--- a/_posts/2022-01-05-LEAF.md
+++ b/_posts/2022-01-05-LEAF.md
@@ -6,7 +6,7 @@ tag: [Audio, Filter]
 published: true
 
 toc: true
-toc_sticky: false
+toc_sticky: true
 
 use_math: true
 ---
@@ -67,3 +67,44 @@ github: [google-research/leaf-audio](https://github.com/google-research/leaf-aud
 <p align="center">
 <img src="../assets/images/LEAF/LEAF_14.jpg" width="100%">
 </p>  
+
+# CODE 분석
+<p align="center">
+<img src="../assets/images/LEAF/LEAF_code/LEAF_code_001.jpeg" width="100%">
+</p> 
+<p align="center">
+<img src="../assets/images/LEAF/LEAF_code/LEAF_code_002.jpeg" width="100%">
+</p>
+<p align="center">
+<img src="../assets/images/LEAF/LEAF_code/LEAF_code_003.jpeg" width="100%">
+</p> 
+<p align="center">
+<img src="../assets/images/LEAF/LEAF_code/LEAF_code_004.jpeg" width="100%">
+</p> 
+<p align="center">
+<img src="../assets/images/LEAF/LEAF_code/LEAF_code_005.jpeg" width="100%">
+</p> 
+<p align="center">
+<img src="../assets/images/LEAF/LEAF_code/LEAF_code_006.jpeg" width="100%">
+</p> 
+<p align="center">
+<img src="../assets/images/LEAF/LEAF_code/LEAF_code_007.jpeg" width="100%">
+</p> 
+<p align="center">
+<img src="../assets/images/LEAF/LEAF_code/LEAF_code_008.jpeg" width="100%">
+</p> 
+<p align="center">
+<img src="../assets/images/LEAF/LEAF_code/LEAF_code_009.jpeg" width="100%">
+</p> 
+<p align="center">
+<img src="../assets/images/LEAF/LEAF_code/LEAF_code_010.jpeg" width="100%">
+</p> 
+<p align="center">
+<img src="../assets/images/LEAF/LEAF_code/LEAF_code_011.jpeg" width="100%">
+</p> 
+<p align="center">
+<img src="../assets/images/LEAF/LEAF_code/LEAF_code_012.jpeg" width="100%">
+</p> 
+<p align="center">
+<img src="../assets/images/LEAF/LEAF_code/LEAF_code_013.jpeg" width="100%">
+</p> 
