--- a/_posts/2022-06-12-Quasi-RNN.md
+++ b/_posts/2022-06-12-Quasi-RNN.md
@@ -9,7 +9,7 @@ tag: [RNN, Text]
 published: true
 
 toc: true
-toc_sticky: false
+toc_sticky: true
 ---
 
 > [Quasi-RNN](https://arxiv.org/pdf/1611.01576.pdf)  
