--- a/_posts/2022-06-15-CLAR.md
+++ b/_posts/2022-06-15-CLAR.md
@@ -6,7 +6,7 @@ tag: [Self-Supervised Learning, Audio]
 
 published: true
 toc: true
-toc_sticky: false
+toc_sticky: true
 ---
   
 > [CLAR: Contrastive Learning of Auditory Representations](http://proceedings.mlr.press/v130/al-tahan21a/al-tahan21a.pdf)  
