--- a/_posts/2022-06-17-SimCLR.md
+++ b/_posts/2022-06-17-SimCLR.md
@@ -6,7 +6,7 @@ tag: [Self-Supervised Learning, Vision]
 
 published: true
 toc: true
-toc_sticky: false
+toc_sticky: true
 ---
 
 > [SimCLR: A Simple Framework for Contrastive Learning of Visual Representations](https://arxiv.org/pdf/2002.05709.pdf)  
