--- a/_posts/2022-06-28-BYOL-A.md
+++ b/_posts/2022-06-28-BYOL-A.md
@@ -6,7 +6,7 @@ tag: [Self-Supervised Learning, Audio]
 
 published: true
 toc: true
-toc_sticky: false
+toc_sticky: true
 ---
 
 > [BYOL-A: BYOL for Audio: Exploring Pre-trained General-purpose Audio Representations](https://arxiv.org/pdf/2204.07402.pdf)  
