--- a/_posts/2023-06-27-pwa-1.md
+++ b/_posts/2023-06-27-pwa-1.md
@@ -5,7 +5,7 @@ category: "정리함"
 tag: [PWA, HTML, JS]
 published: true
 toc: true
-toc_sticky: false
+toc_sticky: true
 ---
 > **교재: Do it! 프로그레시브 웹앱 만들기 - [실습 github](https://github.com/codedesign-webapp)**
 
