--- a/_posts/2023-06-27-pwa-3.md
+++ b/_posts/2023-06-27-pwa-3.md
@@ -5,7 +5,7 @@ category: "정리함"
 tag: [PWA, Vue, Vuetify]
 published: true
 toc: true
-toc_sticky: false
+toc_sticky: true
 ---
 > **교재: Do it! 프로그레시브 웹앱 만들기 - [실습 github](https://github.com/codedesign-webapp)**
 
@@ -71,6 +71,12 @@ toc_sticky: false
              input에 쓰는 값에 따라 달라짐 -->
   ```
   <!-- % endraw % -->
+- **class-binding**
+    - 엘리먼트에 적용된 클래스 선택자가 사용될지 binding으로 결정
+    ```html
+    <div v-bind:class="{ my-style: boolean_value }"></div>
+    <div       :class="{ my-style: boolean_value }"></div>
+    ```
 <br>
 
 ## v-if & v-for
