--- a/_posts/2021-02-24-GE2E.md
+++ b/_posts/2021-02-24-GE2E.md
@@ -14,7 +14,7 @@ use_math: true
 
 # 1. Introduction
 <p align="center">
-<img src = "./images/GE2E/img_00001.jpeg" width="100%">
+<img src = "images/GE2E/img_00001.jpeg" width="100%">
 </p>
 
 - Generalized End-to-End Loss(GE2E)는 발화자 식별(speaker verification)을 위해 제안된 손실 함수 
@@ -23,7 +23,7 @@ use_math: true
 # 2. Method
 ## 2.2 Loss 
 <p align="center">
-<img src = "./images/GE2E/img_00002.jpeg" width="100%">
+<img src = "images/GE2E/img_00002.jpeg" width="100%">
 </p>
 
 - 각 batch는 $N \times M$ 개의 utterance로 구성<br>
@@ -38,7 +38,7 @@ use_math: true
 <br><br>
 
 <p align="center">
-<img src = "./images/GE2E/img_00004.jpeg" width="100%">
+<img src = "images/GE2E/img_00004.jpeg" width="100%">
 
 - 각 embedding vector들과 각 speaker의 centroid embedding vector들의 cosine similarity를 계산하고 scaling하여 <b>similarity matrix $S_{ji,k}$</b>를 만듦
   $$S_{ji,k}=w\cdot cos(e_{ji, c_k})+b$$
@@ -60,7 +60,7 @@ j일 때 0이 나오게 할 수 있도록 함
 <br><br>
 
 <p align="center">
-<img src = "./images/GE2E/img_00003.jpeg" width="100%">
+<img src = "images/GE2E/img_00003.jpeg" width="100%">
 </p>
 
 - 학습의 안정성을 높이고 자명성(trivial)을 피하기 위해 $e_{ji}$를 제외하고 해당하는 발화자의 centroid를 구하는 것이 좋기에 수식 변경하여 사용
@@ -85,7 +85,7 @@ j일 때 0이 나오게 할 수 있도록 함
 
 # 3. Text-Independent Speaker Verification Result
 <p align="center">
-<img src = "./images/GE2E/img_00007.png" width="100%">
+<img src = "images/GE2E/img_00007.png" width="100%">
 </p>
 
 - input: 40-dimension log-mel-filterbank energies (width 25ms, step 10ms)
@@ -94,7 +94,7 @@ j일 때 0이 나오게 할 수 있도록 함
 <br><br>
 
 <p align="center">
-<img src = "./images/GE2E/img_00005.jpeg" width="100%">
+<img src = "images/GE2E/img_00005.jpeg" width="100%">
 </p>
 
 - inference: sliding 160 frames 길이의 sliding window를 50%씩 겹쳐서 각각 embedding vector를 구하고 이를 window-wise L2 normalize한 후, element-wise 평균을 해주어서 에서 input으로 사용
@@ -121,7 +121,7 @@ j일 때 0이 나오게 할 수 있도록 함
 <br><br>
 
 <p align="center">
-<img src = "./images/GE2E/img_00006.jpeg" width="100%">
+<img src = "images/GE2E/img_00006.jpeg" width="100%">
 </p>
 
 - EER(Equal Error Rate) 설명에 대한 이미지
