--- a/_posts/2021-12-29-Image-FT.md
+++ b/_posts/2021-12-29-Image-FT.md
@@ -5,35 +5,35 @@ category: "정리함"
 tag: [Image, FFT]
 published: true
 
-toc: true
+toc: false
 toc_sticky: true
 use_math: true
 ---
 
-> 출처: [다크프로그래머](https://darkpgmr.tistory.com/171)
+> 출처: [다크프로그래머](https:/darkpgmr.tistory.com/171)
 
 "다크 프로그래머-Fourier Transform(푸리에 변환)의 이해와 활용" 직접 실험해보기
 
 <p align="center">
-<img src = "../정리함/Fourier_Image/img_00002.png" width="100%">
+<img src = "../Fourier_Image/img_00002.png" width="100%">
 </p>
 
-- 푸리에 변환은 임의의 신호를 sin, cosine 주기 함수를 활용하여 분해하여 표현하는 것
+- 푸리에 변환은 임의의 신호를 sine, cosine 주기 함수를 활용하여 분해하여 표현하는 것
 - 푸리에 변환된 값은 실수와 허수의 합으로 표현되며, 이를 활용하여 magnitude와 phase를 구함
 <br><br>
 
 <p align="center">
-<img src = "../정리함/Fourier_Image/owl1.png" width="23%">
-<img src = "../정리함/Fourier_Image/owl2.png" width="23%">
-<img src = "../정리함/Fourier_Image/owl3.png" width="23%">
-<img src = "../정리함/Fourier_Image/owl4.jpeg" width="23.3%">
+<img src = "../Fourier_Image/owl1.png" width="23%">
+<img src = "../Fourier_Image/owl2.png" width="23%">
+<img src = "../Fourier_Image/owl3.png" width="23%">
+<img src = "../Fourier_Image/owl4.jpeg" width="23.3%">
 </p>
 
 - 원본 이미지에서 가로, 세로, 대각선의 선을 추가하여 이에 따른 푸리에 변환 결과 비교
 <br><br>
 
 <p align="center">
-<img src = "../정리함/Fourier_Image/img_00003.png" width="100%">
+<img src = "../Fourier_Image/img_00003.png" width="100%">
 </p>
 
 - 4가지 input의 magnitude와 phase 계산하고 magnitude와 phase를 활용하여 다시 이미지를 reconstruct
@@ -85,17 +85,17 @@ use_math: true
 <br>
 
 <p align="center">
-<img src = "../정리함/Fourier_Image/img_00005.png" width="100%">
+<img src = "../Fourier_Image/img_00005.png" width="100%">
 </p>
 
 - magnitude의 일부를 가리고 (0으로 mask) 다시 reconstruct 했을 때, 올빼미에 선들이 사라짐
 <br><br>
 
 <p align="center">
-<img src = "../정리함/Fourier_Image/img_00006.png" width="100%">
+<img src = "../Fourier_Image/img_00006.png" width="100%">
 </p>
 <p align="center">
-<img src = "../정리함/Fourier_Image/img_00001.png" width="100%">
+<img src = "../Fourier_Image/img_00001.png" width="100%">
 </p>
 
 - 소리의 푸리에 변환 (UrbanSound8K 데이터셋)
