--- a/_posts/2022-06-12-Quasi-RNN.md
+++ b/_posts/2022-06-12-Quasi-RNN.md
@@ -14,7 +14,7 @@ toc_sticky: true
 
 > [Quasi-RNN](https://arxiv.org/pdf/1611.01576.pdf)  
 
-연관 포스트: [Audio Self-supervised Learning: A Survey (2) Audio]({% post_url 2022-05-30-Audio-SSL-A-Survey-(2) %})   
+연관 포스트: [Audio Self-supervised Learning: A Survey (2) Audio]({% post_url 2022-05-30-Audio-SSL-A-Survey-2 %})   
 <br/>
 
 # 1. Why Quasi-RNN?
