--- a/_posts/2022-06-15-CLAR.md
+++ b/_posts/2022-06-15-CLAR.md
@@ -13,7 +13,7 @@ toc_sticky: true
 > [CLAR github](https://github.com/haideraltahan/CLAR)
 
 연관 포스트: 
-1. [Audio Self-supervised Learning: A Survey (2) Audio]({% post_url 2022-05-30-Audio-SSL-A-Survey-(2) %})   
+1. [Audio Self-supervised Learning: A Survey (2) Audio]({% post_url 2022-05-30-Audio-SSL-A-Survey-2 %})   
 2. [CLAR]({% post_url 2022-06-17-SimCLR %})  
 
 > **Abstract**
