--- a/_posts/2022-06-28-BYOL-A.md
+++ b/_posts/2022-06-28-BYOL-A.md
@@ -13,7 +13,7 @@ toc_sticky: true
 > [BYOL-A official github](https://github.com/nttcslab/byol-a)
 
 연관 포스트:
-1. [Audio Self-supervised Learning: A Survey (1) Audio]({% post_url 2022-05-30-Audio-SSL-A-Survey-(2) %})
+1. [Audio Self-supervised Learning: A Survey (1) Audio]({% post_url 2022-05-30-Audio-SSL-A-Survey-2 %})
 
 BYOL-A 2번째 논문
 
