--- a/_posts/2023-11-09-SPADE.md
+++ b/_posts/2023-11-09-SPADE.md
@@ -2,7 +2,7 @@
 title: "SPADE: Semantic Image Synthesis with Spatially-Adaptive Normalization"
 date: 2023-11-09 15:00
 category: "논문-리뷰"
-tag: [Vison, Image-synthesis, GAN]
+tag: [Vision, Image-synthesis, GAN]
 published: true
 
 toc: true
