--- a/_posts/2023-11-16-ViPLO.md
+++ b/_posts/2023-11-16-ViPLO.md
@@ -2,7 +2,7 @@
 title: "ViPLO: Vision Transformer based Pose-Conditioned Self-Loop Graph for Human-Object Interaction Detection"
 date: 2023-11-16 15:00
 category: "논문-리뷰"
-tag: [Vison, HOI]
+tag: [Vision, HOI]
 published: true
 
 toc: true
