--- a/_posts/2023-03-03-DTDN.md
+++ b/_posts/2023-03-03-DTDN.md
@@ -3,7 +3,7 @@
 title: "Learning Task-oriented Disentangled Representations for Unsupervised Domain Adaptation"
 date: 2023-03-03 18:00
 category: "논문-리뷰"
-tag: [Vision, Disentanglement,]
+tag: [Vision, Disentanglement]
 published: true
 
 toc: false
