fix: update image paths in Qwen2.5-Omni post

--- a/_posts/2025-11-05-Qwen2.5-Omni.md
+++ b/_posts/2025-11-05-Qwen2.5-Omni.md
@@ -15,7 +15,7 @@ use_math: true
 > [[블로그](https://qwen.ai/blog?id=9ef8b30f398c303da67ab622204b07d6c74af9cd&from=research.research-list)] 
 
 <figure class="centered-figure">
-  <img src="../assets/images/Qwen2.5-Omni/img_0001.jpeg"  style="width: 80%;">
+  <img src="../assets/images/Qwen2.5-omni/0001.jpeg"  style="width: 80%;">
   <figcaption class="caption">텍스트, 오디오, 이미지, 영상을 입력받아 실시간으로 텍스트와 음성 응답을 생성하는 멀티모달 모델인 Qwen2.5-Omni</figcaption>
 </figure>
 
@@ -58,7 +58,7 @@ Qwen3-Omni를 이해하기 위해 읽게 되었다.
 -->
 ## Thinker-Talker 구조
 <figure class="centered-figure">
-  <img src="../assets/images/Qwen2.5-Omni/img_0002.jpeg"  style="width: 80%;">
+  <img src="../assets/images/Qwen2.5-omni/0002.jpeg"  style="width: 80%;">
   <figcaption class="caption">Thinker-Talker 구조</figcaption>
 </figure>
 
@@ -75,7 +75,7 @@ Qwen3-Omni를 이해하기 위해 읽게 되었다.
 
 ## 어떻게 다양한 모달을 입력 받을까? Perceivation!
 <figure class="centered-figure">
-  <img src="../assets/images/Qwen2.5-Omni/img_0003.jpeg"  style="width: 80%;">
+  <img src="../assets/images/Qwen2.5-omni/0003.jpeg"  style="width: 80%;">
   <figcaption class="caption">TMRoPE 값 예시. 해당 값이 각 representation에 더해진다.</figcaption>
 </figure>
 
@@ -119,7 +119,7 @@ Qwen3-Omni를 이해하기 위해 읽게 되었다.
 
 <b>스트리밍 Codec 생성</b>
 <figure class="centered-figure">
-  <img src="../assets/images/Qwen2.5-Omni/img_0004.jpeg"  style="width: 80%;">
+  <img src="../assets/images/Qwen2.5-omni/0004.jpeg"  style="width: 80%;">
   <figcaption class="caption">TMRoPE 값 예시. 해당 값이 각 representation에 더해진다.</figcaption>
 </figure>
 
@@ -136,7 +136,7 @@ Qwen3-Omni를 이해하기 위해 읽게 되었다.
 
 ## Post-training
 <figure class="centered-figure">
-  <img src="../assets/images/Qwen2.5-Omni/img_0005.jpeg"  style="width: 80%;">
+  <img src="../assets/images/Qwen2.5-omni/0005.jpeg"  style="width: 80%;">
   <figcaption class="caption">Post-training에 사용하는 데이터 포멧</figcaption>
 </figure>
 
