Fix: remove post_url for qwen3-omni

--- a/_posts/2025-11-05-Qwen2.5-Omni.md
+++ b/_posts/2025-11-05-Qwen2.5-Omni.md
@@ -15,7 +15,7 @@ use_math: true
 > [[블로그](https://qwen.ai/blog?id=9ef8b30f398c303da67ab622204b07d6c74af9cd&from=research.research-list)] 
 
 # 🔗 연관 포스트
-1. [Qwen3-Omni] (예정) <!--({% post_url 2025-11-12-Qwen3-Omni%}) -->
+1. Qwen3-Omni: 예정
 
 ---
 <br>
